[gd_scene load_steps=65 format=3 uid="uid://scu3rxjyy0qg"]

[ext_resource type="Texture2D" uid="uid://ud8oft07ou4d" path="res://bg/bg.jpg" id="1_o4lr0"]
[ext_resource type="Script" path="res://MainIDE.gd" id="1_qvf0p"]
[ext_resource type="FontFile" uid="uid://bxhoek7fge4o" path="res://fonts/FiraCode-Bold.ttf" id="2_ddpcp"]
[ext_resource type="Texture2D" uid="uid://doxjeie4hki2e" path="res://icons/new-normal.png" id="2_osjhi"]
[ext_resource type="FontFile" uid="uid://ckufgv3xjdy1x" path="res://fonts/FiraCode-Regular.ttf" id="2_va5tx"]
[ext_resource type="Script" path="res://OpenFileDialog.gd" id="2_vi52c"]
[ext_resource type="Texture2D" uid="uid://csxxwthbhpe4u" path="res://icons/new-pressed.png" id="3_v2peo"]
[ext_resource type="Script" path="res://ConfirmationDialog.gd" id="4_klljr"]
[ext_resource type="Texture2D" uid="uid://ck3hlham8hwfg" path="res://icons/new-hover.png" id="4_lmoyn"]
[ext_resource type="Texture2D" uid="uid://behq13fvg7kp3" path="res://icons/open-normal.png" id="6_56fdl"]
[ext_resource type="Texture2D" uid="uid://b7s5o1kuttd7n" path="res://icons/new-disable.png" id="6_poir6"]
[ext_resource type="Texture2D" uid="uid://dtxnuon05sufs" path="res://icons/open-pressed.png" id="7_7mgmx"]
[ext_resource type="Texture2D" uid="uid://qwnyxm30dkss" path="res://icons/open-hover.png" id="8_m4kbi"]
[ext_resource type="Texture2D" uid="uid://bvq68f4hdkd8n" path="res://icons/open-disable.png" id="9_a8ss7"]
[ext_resource type="Texture2D" uid="uid://bsnjm0k05n3h" path="res://icons/save-normal.png" id="10_6v7d0"]
[ext_resource type="Texture2D" uid="uid://cqobwdjbv4pkq" path="res://icons/save-pressed.png" id="11_jvl15"]
[ext_resource type="Texture2D" uid="uid://dp8lwywd2irbg" path="res://icons/save-hover.png" id="12_ub0n3"]
[ext_resource type="Texture2D" uid="uid://d2j4taq30pf2" path="res://icons/save-disable.png" id="13_nhlsp"]
[ext_resource type="Texture2D" uid="uid://coasbkmvmpnei" path="res://icons/close-normal.png" id="14_0vo8o"]
[ext_resource type="Texture2D" uid="uid://b5uo1kffocxlx" path="res://icons/saveas-normal.png" id="14_7j276"]
[ext_resource type="Texture2D" uid="uid://cp4r4ry0cdxwx" path="res://icons/close-pressed.png" id="15_iiaje"]
[ext_resource type="Texture2D" uid="uid://2y0737ry3w1l" path="res://icons/saveas-pressed.png" id="15_jqtti"]
[ext_resource type="Texture2D" uid="uid://cge83rl2tc4eg" path="res://icons/close-hover.png" id="16_3dl71"]
[ext_resource type="Texture2D" uid="uid://byg5v8jyr8jos" path="res://icons/saveas-hover.png" id="16_6xoms"]
[ext_resource type="Texture2D" uid="uid://cjwo68ke8fhjb" path="res://icons/saveas-disable.png" id="17_6ca8g"]
[ext_resource type="Texture2D" uid="uid://sivklv15kits" path="res://icons/close-disable.png" id="17_oovuv"]
[ext_resource type="Texture2D" uid="uid://bq2ry6mjv150" path="res://icons/undo-normal.png" id="18_8npa1"]
[ext_resource type="Texture2D" uid="uid://drnjsarq3houg" path="res://icons/cut-normal.png" id="18_rcf4b"]
[ext_resource type="Texture2D" uid="uid://wmx3w87frbrq" path="res://icons/undo-pressed.png" id="19_dcyi4"]
[ext_resource type="Texture2D" uid="uid://bwlno0mtdw1iq" path="res://icons/cut-pressed.png" id="19_ydupn"]
[ext_resource type="Texture2D" uid="uid://dcsabepp1ua4n" path="res://icons/undo-hover.png" id="20_7jcu4"]
[ext_resource type="Texture2D" uid="uid://c0luf51tivu6r" path="res://icons/cut-disable.png" id="21_2l1x6"]
[ext_resource type="Texture2D" uid="uid://dtcfqukhft0py" path="res://icons/undo-disable.png" id="21_2t2xs"]
[ext_resource type="Texture2D" uid="uid://bekju4j41edn1" path="res://icons/redo-normal.png" id="22_oiy2k"]
[ext_resource type="Texture2D" uid="uid://coqrrlwwtawaf" path="res://icons/redo-pressed.png" id="23_yuw6r"]
[ext_resource type="Texture2D" uid="uid://budg3r01aj13u" path="res://icons/redo-hover.png" id="24_8c0t7"]
[ext_resource type="Texture2D" uid="uid://b3bd1l1hlcfyl" path="res://icons/redo-disable.png" id="25_jcrgj"]
[ext_resource type="Texture2D" uid="uid://btmo74pqope2y" path="res://icons/copy-normal.png" id="26_vugnr"]
[ext_resource type="Texture2D" uid="uid://ct1cpopse8lq4" path="res://icons/copy-pressed.png" id="27_jw3mf"]
[ext_resource type="Texture2D" uid="uid://d8yyx1gp0sso" path="res://icons/copy-hover.png" id="28_ld6iy"]
[ext_resource type="Texture2D" uid="uid://dpj1pglef7xlm" path="res://icons/copy-disable.png" id="29_26dcf"]
[ext_resource type="Texture2D" uid="uid://cs472mo4cikue" path="res://icons/cut-hover.png" id="30_rnir3"]
[ext_resource type="Texture2D" uid="uid://d3312gds8ehg6" path="res://icons/paste-normal.png" id="34_eyt30"]
[ext_resource type="Texture2D" uid="uid://qtrkfmr8auxn" path="res://icons/paste-pressed.png" id="35_tseid"]
[ext_resource type="Texture2D" uid="uid://d111d27gsb1an" path="res://icons/paste-hover.png" id="36_qfjq1"]
[ext_resource type="Texture2D" uid="uid://bee2agwsrmnv8" path="res://icons/paste-disable.png" id="37_7ya76"]
[ext_resource type="Texture2D" uid="uid://q8wensduaqnc" path="res://icons/compile-normal.png" id="38_g8lxh"]
[ext_resource type="Texture2D" uid="uid://cnxogqyhlf0my" path="res://icons/compile-pressed.png" id="39_uwr6v"]
[ext_resource type="Texture2D" uid="uid://cssbd5u0ctc6v" path="res://icons/compile-hover.png" id="40_gd8hl"]
[ext_resource type="Texture2D" uid="uid://bbevok5amekrn" path="res://icons/compile-disable.png" id="41_of6or"]
[ext_resource type="Texture2D" uid="uid://c24x20p28xh0o" path="res://icons/run-normal.png" id="42_r0dft"]
[ext_resource type="Texture2D" uid="uid://ci84y3ibdmrwx" path="res://icons/run-pressed.png" id="43_j3a0d"]
[ext_resource type="Texture2D" uid="uid://cwt3nqtkjfh7f" path="res://icons/run-hover.png" id="44_nbld7"]
[ext_resource type="FontFile" uid="uid://cqhs2u7h8gjsm" path="res://fonts/FiraCode-Medium.ttf" id="46_0llj4"]
[ext_resource type="Texture2D" uid="uid://daxd6vcwg1qu8" path="res://icons/run-disable.png" id="53_urgxg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m4vfl"]

[sub_resource type="Theme" id="Theme_bmwp3"]
resource_local_to_scene = true
default_font = ExtResource("2_va5tx")
default_font_size = 12
MarginContainer/styles/Style = SubResource("StyleBoxTexture_m4vfl")

[sub_resource type="Theme" id="Theme_41a0g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3rpk6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uv662"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vysx"]
bg_color = Color(0.976471, 0.976471, 0.976471, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.819608, 0.819608, 0.819608, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
expand_margin_top = 5.0

[sub_resource type="CodeHighlighter" id="CodeHighlighter_efhv8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epdb2"]
bg_color = Color(0.976471, 0.976471, 0.976471, 0.976471)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.819608, 0.819608, 0.819608, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g8mcn"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvf0p")

[node name="OpenFileDialog" type="FileDialog" parent="."]
transparent_bg = true
gui_embed_subwindows = true
sdf_oversize = 0
title = "Open a File"
initial_position = 2
size = Vector2i(700, 400)
transient = false
exclusive = false
unresizable = true
borderless = true
always_on_top = true
popup_window = true
extend_to_title = true
min_size = Vector2i(700, 70)
content_scale_mode = 2
theme = SubResource("Theme_bmwp3")
theme_override_colors/folder_icon_color = Color(0, 0.721569, 0.556863, 1)
theme_override_colors/file_icon_color = Color(0.313726, 0.658824, 1, 1)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray(".bob", ".BOB")
script = ExtResource("2_vi52c")

[node name="SaveAsFileDialog" type="FileDialog" parent="."]
transparent_bg = true
gui_embed_subwindows = true
sdf_oversize = 0
initial_position = 2
size = Vector2i(700, 400)
transient = false
exclusive = false
unresizable = true
borderless = true
always_on_top = true
popup_window = true
extend_to_title = true
min_size = Vector2i(700, 70)
content_scale_mode = 2
theme = SubResource("Theme_bmwp3")
theme_override_colors/folder_icon_color = Color(0, 0.721569, 0.556863, 1)
theme_override_colors/file_icon_color = Color(0.313726, 0.658824, 1, 1)
ok_button_text = "Save"
access = 2
filters = PackedStringArray(".bob", ".BOB")
script = ExtResource("2_vi52c")

[node name="OpenPopUp" type="ConfirmationDialog" parent="."]
script = ExtResource("4_klljr")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "You have unsaved changes."
size = Vector2i(300, 100)
ok_button_text = "Ok"
script = ExtResource("4_klljr")

[node name="TextEdit" type="TextEdit" parent="ConfirmationDialog"]
visible = false
offset_left = 8.0
offset_top = 8.0
offset_right = 342.0
offset_bottom = 51.0
placeholder_text = "Do you want to continue?"
editable = false

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 1.125
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_41a0g")
texture = ExtResource("1_o4lr0")
expand_mode = 1

[node name="PanelContainer2" type="PanelContainer" parent="TextureRect"]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_3rpk6")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/PanelContainer2"]
layout_direction = 1
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/PanelContainer2/MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_stretch_ratio = 5.3
theme_override_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer"]
show_behind_parent = true
layout_direction = 2
layout_mode = 2
size_flags_stretch_ratio = 3.9
theme_override_colors/default_color = Color(0.313726, 0.658824, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_ddpcp")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center][img]res://icons/bob_icon_51.png[/img] Big-O Compiler
"
fit_content = true
scroll_active = false

[node name="PanelContainer3" type="PanelContainer" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer"]
show_behind_parent = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_uv662")

[node name="hbOX" type="HBoxContainer" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer"]
clip_children = 2
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 5

[node name="New" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "New File"
texture_normal = ExtResource("2_osjhi")
texture_pressed = ExtResource("3_v2peo")
texture_hover = ExtResource("4_lmoyn")
texture_disabled = ExtResource("6_poir6")
ignore_texture_size = true
stretch_mode = 5

[node name="Open" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Open File"
texture_normal = ExtResource("6_56fdl")
texture_pressed = ExtResource("7_7mgmx")
texture_hover = ExtResource("8_m4kbi")
texture_disabled = ExtResource("9_a8ss7")
ignore_texture_size = true
stretch_mode = 5

[node name="Save" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Save File"
disabled = true
texture_normal = ExtResource("10_6v7d0")
texture_pressed = ExtResource("11_jvl15")
texture_hover = ExtResource("12_ub0n3")
texture_disabled = ExtResource("13_nhlsp")
ignore_texture_size = true
stretch_mode = 5

[node name="Saveas" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Save File As"
disabled = true
texture_normal = ExtResource("14_7j276")
texture_pressed = ExtResource("15_jqtti")
texture_hover = ExtResource("16_6xoms")
texture_disabled = ExtResource("17_6ca8g")
ignore_texture_size = true
stretch_mode = 5

[node name="Close" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Close File"
disabled = true
texture_normal = ExtResource("14_0vo8o")
texture_pressed = ExtResource("15_iiaje")
texture_hover = ExtResource("16_3dl71")
texture_disabled = ExtResource("17_oovuv")
ignore_texture_size = true
stretch_mode = 5

[node name="Undo" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Undo Action"
disabled = true
texture_normal = ExtResource("18_8npa1")
texture_pressed = ExtResource("19_dcyi4")
texture_hover = ExtResource("20_7jcu4")
texture_disabled = ExtResource("21_2t2xs")
ignore_texture_size = true
stretch_mode = 5

[node name="Redo" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Redo Action"
disabled = true
texture_normal = ExtResource("22_oiy2k")
texture_pressed = ExtResource("23_yuw6r")
texture_hover = ExtResource("24_8c0t7")
texture_disabled = ExtResource("25_jcrgj")
ignore_texture_size = true
stretch_mode = 5

[node name="Copy" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Copy Text"
disabled = true
texture_normal = ExtResource("26_vugnr")
texture_pressed = ExtResource("27_jw3mf")
texture_hover = ExtResource("28_ld6iy")
texture_disabled = ExtResource("29_26dcf")
ignore_texture_size = true
stretch_mode = 5

[node name="Cut" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Cut Text"
disabled = true
texture_normal = ExtResource("18_rcf4b")
texture_pressed = ExtResource("19_ydupn")
texture_hover = ExtResource("30_rnir3")
texture_disabled = ExtResource("21_2l1x6")
ignore_texture_size = true
stretch_mode = 5

[node name="Paste" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Paste Text"
disabled = true
texture_normal = ExtResource("34_eyt30")
texture_pressed = ExtResource("35_tseid")
texture_hover = ExtResource("36_qfjq1")
texture_disabled = ExtResource("37_7ya76")
ignore_texture_size = true
stretch_mode = 5

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
layout_mode = 2
size_flags_horizontal = 3
ratio = 0.001

[node name="Compile" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Compile"
disabled = true
texture_normal = ExtResource("38_g8lxh")
texture_pressed = ExtResource("39_uwr6v")
texture_hover = ExtResource("40_gd8hl")
texture_disabled = ExtResource("41_of6or")
ignore_texture_size = true
stretch_mode = 5

[node name="Run" type="TextureButton" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Run"
disabled = true
texture_normal = ExtResource("42_r0dft")
texture_pressed = ExtResource("43_j3a0d")
texture_hover = ExtResource("44_nbld7")
texture_disabled = ExtResource("53_urgxg")
ignore_texture_size = true
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer"]
clip_children = 2
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.11
theme_override_styles/panel = SubResource("StyleBoxFlat_8vysx")

[node name="CodeEdit" type="CodeEdit" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.976471, 0.976471, 0.976471, 0.976471)
theme_override_colors/font_color = Color(0.278431, 0.278431, 0.278431, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_colors/selection_color = Color(0.105882, 0.352941, 0.427451, 1)
theme_override_colors/current_line_color = Color(0.842392, 0.924788, 1, 1)
theme_override_colors/caret_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_colors/line_number_color = Color(0.407843, 0.407843, 0.407843, 1)
theme_override_colors/word_highlighted_color = Color(0.176471, 0.121569, 0.360784, 1)
theme_override_colors/line_length_guideline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("46_0llj4")
theme_override_font_sizes/font_size = 14
placeholder_text = "Click \"New\" or \"Open\" to start."
editable = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.57
syntax_highlighter = SubResource("CodeHighlighter_efhv8")
highlight_all_occurrences = true
highlight_current_line = true
line_folding = true
gutters_draw_breakpoints_gutter = true
gutters_draw_bookmarks = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
indent_size = 5
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_qvf0p")

[node name="PanelContainer2" type="PanelContainer" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_epdb2")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_g8mcn")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_open_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveAsFileDialog" to="." method="_on_save_as_file_dialog_file_selected"]
[connection signal="confirmed" from="OpenPopUp" to="." method="_on_open_pop_up_confirmed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/Saveas" to="." method="_on_saveas_pressed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/Redo" to="." method="_on_redo_pressed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/Copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/Cut" to="." method="_on_cut_pressed"]
[connection signal="pressed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/hbOX/Paste" to="." method="_on_paste_pressed"]
[connection signal="text_changed" from="TextureRect/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/CodeEdit" to="." method="_on_code_edit_text_changed"]
